# rdkix

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  CTestCustom.ctest.in  INSTALL  README  README.md  rdkix-config.cmake.in  rename.py  setup.cfg
Code/ChemicalFeatures/: CMakeLists.txt  ChemicalFeature.h  FreeChemicalFeature.cpp  FreeChemicalFeature.h  testChemicalFeatures.cpp
Code/ChemicalFeatures/Wrap/: CMakeLists.txt  FreeChemicalFeature.cpp  rdChemicalFeatures.cpp  testFeatures.py
Code/DistGeom/: BoundsMatrix.h  CMakeLists.txt  ChiralSet.h  ChiralViolationContrib.h  ChiralViolationContribs.cpp  ChiralViolationContribs.h  DistGeomUtils.cpp  DistGeomUtils.h  DistViolationContrib.cpp  DistViolationContrib.h  DistViolationContribs.cpp  DistViolationContribs.h  FourthDimContrib.h  FourthDimContribs.h  TriangleSmooth.cpp  TriangleSmooth.h  testDistGeom.cpp
Code/DistGeom/Wrap/: CMakeLists.txt  DistGeom.cpp  rough_test.py
Code/Geometry/: CMakeLists.txt  Grid3D.h  GridUtils.cpp  GridUtils.h  Transform.h  Transform2D.cpp  Transform2D.h  Transform3D.cpp  Transform3D.h  UniformGrid3D.cpp  UniformGrid3D.h  Utils.h  catch_tests.cpp  point.cpp  point.h  testGrid.cpp  testTransforms.cpp
Code/Geometry/Wrap/: CMakeLists.txt  Point.cpp  UniformGrid3D.cpp  rdGeometry.cpp  testGeometry.py
Code/GraphMol/Abbreviations/: Abbreviations.cpp  Abbreviations.h  AbbreviationsUtils.cpp  CMakeLists.txt  catch_tests.cpp
Code/GraphMol/ChemReactions/: CDXMLParser.cpp  CMakeLists.txt  DaylightParser.cpp  MDLParser.cpp  MoleculeParser.cpp  PNGParser.cpp  PreprocessRxn.cpp  PreprocessRxn.h  Reaction.cpp  Reaction.h  ReactionDepict.cpp  ReactionFingerprints.cpp  ReactionFingerprints.h  ReactionParser.h  ReactionPickler.cpp  ReactionPickler.h  ReactionRunner.cpp  ReactionRunner.h  ReactionUtils.cpp  ReactionUtils.h  ReactionWriter.cpp  SanitizeRxn.cpp  SanitizeRxn.h  catch_tests.cpp  testReaction.cpp  testReactionFingerprints.cpp
Code/GraphMol/Deprotect/: CMakeLists.txt  Deprotect.cpp  Deprotect.h  deprotectTest.cpp
Code/GraphMol/DetermineBonds/: CMakeLists.txt  DetermineBonds.cpp  DetermineBonds.h  catch_tests.cpp
Code/JavaWrappers/: Abbreviations.i  Atom.i  AtomIterators.i  AtomPairs.i  Atom_doc.i  Bond.i  BondIterators.i  BondIterators_doc.i  Bond_doc.i  CMakeLists.txt  ChemReactions.i  ChemReactions_doc.i  ChemTransforms.i  Conformer.i  Conformer_doc.i  Descriptors.i  Dict.i  DistGeom.i  ExplicitBitVect_doc.i  FMCS.i  FilterCatalog.i  FilterCatalogParams_doc.i  FilterCatalog_doc.i  FilterCatalogs_doc.i  Fingerprints.i  ForceField.i  GeneralizedSubstruct.i  GenericRDKixException.h  MolBundle.i  MolDraw2D.i  MolEnumerator.i  MolHash.i  MolOps.i  MolStandardize.i  MolSupplier.i  MorganFingerprints.h  MorganFingerprints.i  PeriodicTable_doc.i  Queries.i  QueryAtom.i  (+34 more)
Code/MinimalLib/: CMakeLists.txt  cffi_test.c  cffiwrapper.cpp  cffiwrapper.h  common.h  common_defs.h  jswrapper.cpp  minilib.cpp  minilib.h  simple.py  testMinilib.cpp
Code/Numerics/: CMakeLists.txt  Conrec.h  Matrix.h  SquareMatrix.h  SymmMatrix.h  Vector.h  testConrec.cpp  testMatrices.cpp
Code/RDGeneral/: BadFileException.h  CMakeLists.txt  ConcurrentQueue.h  Dict.h  Exceptions.h  FileParseException.h  Invariant.cpp  Invariant.h  LocaleSwitcher.cpp  LocaleSwitcher.h  RDAny.h  RDConfig.h.cmake  RDExportMacros.h  RDGeneralExceptions.cpp  RDLog.cpp  RDLog.h  RDProps.h  RDThreads.h  RDValue-doublemagic.h  RDValue-taggedunion.h  RDValue.h  Ranking.h  StreamOps.h  catch_dict.cpp  catch_logs.cpp  catch_main.cpp  hanoiSort.h  testConcurrentQueue.cpp  testDict.cpp  testRDValue.cpp  types.cpp  types.h  utils.cpp  utils.h  versions.cpp.cmake  versions.h.cmake
Code/SimDivPickers/: CMakeLists.txt  DistPicker.cpp  DistPicker.h  HierarchicalClusterPicker.cpp  HierarchicalClusterPicker.h  LeaderPicker.h  MaxMinPicker.cpp  MaxMinPicker.h  catch_tests.cpp  pickersCLI.cpp  testPickers.cpp
Contrib/ConformerParser/: CMakeLists.txt  ConformerParser.cpp  ConformerParser.h  test.cpp  test_list.py
rdkix/: CMakeLists.txt  RDConfig.py  RDLogger.py  RDRandom.py  TestRunner.py  UnitTestLogging.py  __init__.py  conftest.py  six.py  test_list.py
rdkix/Chem/: AllChem.py  BRICS.py  BuildFragmentCatalog.py  ChemicalFeatures.py  ChemicalForceFields.py  Crippen.py  DSViewer.py  Descriptors.py  Descriptors3D.py  EnumerateHeterocycles.py  EnumerateStereoisomers.py  FastSDMolSupplier.py  FeatFinderCLI.py  FilterCatalog.py  FragmentCatalog.py  FragmentMatcher.py  Fragments.py  FunctionalGroups.py  GraphDescriptors.py  Graphs.py  Lipinski.py  MACCSkeys.py  MCS.py  MolCatalog.py  MolSurf.py  PandasPatcher.py  PandasTools.py  PropertyMol.py  PyMol.py  QED.py  Randomize.py  Recap.py  ReducedGraphs.py  RegistrationHash.py  SATIS.py  SaltRemover.py  ShowMols.py  SpacialScore.py  TemplateAlign.py  TorsionFingerprints.py  (+31 more)
rdkix/DataStructs/: BitEnsemble.py  BitEnsembleDb.py  BitUtils.py  HierarchyVis.py  TopNContainer.py  UnitTestBitEnsemble.py  UnitTestDocTests.py  UnitTestTopNContainer.py  UnitTestcBitVect.py  VectCollection.py  __init__.py  test_list.py
rdkix/Dbase/: DbConnection.py  DbInfo.py  DbModule.py  DbReport.py  DbResultSet.py  DbUtils.py  StorageUtils.py  UnitTestDbConnect.py  UnitTestDbInfo.py  UnitTestDbResultSet.py  UnitTestDbUtils.py  UnitTestStorageUtils.py  __init__.py  test_list.py
rdkix/DistanceGeometry/: __init__.py
rdkix/ForceField/: __init__.py
rdkix/Geometry/: __init__.py
rdkix/ML/: AnalyzeComposite.py  BuildComposite.py  CompositeRun.py  EnrichPlot.py  GrowComposite.py  MatOps.py  ScreenComposite.py  UnitTestAnalyzeComposite.py  UnitTestBuildComposite.py  UnitTestScreenComposite.py  __init__.py  test_list.py
rdkix/Numerics/: __init__.py
rdkix/SimDivFilters/: SimilarityPickers.py  UnitTestSimilarityPickers.py  __init__.py  test_list.py
rdkix/VLib/: Filter.py  Output.py  Supply.py  Transform.py  UnitTestVLib.py  test_list.py
rdkix/sping/: pagesizes.py  pid.py  stringformat.py  test_list.py
rdkix/utils/: UnitTestUtils.py  cactvs.py  chemdraw.py  chemdraw_qax.py  chemutils.py  spiral.py  test_list.py
(+2322 files in other folders)
